[Lucko-Test] test project * fetch data from graph microsoft * store data on mongodb * expose main endpoints